# Khonsu

./: .gitignore  CMakeLists.txt  Install.md  Readme.md  Reference.md
Docs/: LinearLayer.ipynb  LinearLayer.md
examples/: Readme.md  main.cpp
examples/Linear/: CMakeLists.txt  main.cpp
include/layers/base/: shape.hpp  tensor.hpp
layers/samples/Linear/: CMakeLists.txt  Docs_linear.md  config.yaml  data.txt  generate_data.py  main.cpp
python/: Readme.md
python/pybind11/: Readme.md
src/layers/base/: shape.cpp  tensor.cpp  tensor.hpp
test/: Readme.md
test/Binding/: Readme.md
test/Linear/: CMakeLists.txt  Docs_linear.md  config.yaml  linear.cc  linear.h  linear_cuda.cpp  linear_numpy.py  linear_pytorch.py  main.cc  main.cpp
test/Weight_Initalization/: pytorch.py
test/pyopencl/: vector_add.py
